Fixed css grid wrapping issue.

--- a/scss/_gamepage-layout.scss
+++ b/scss/_gamepage-layout.scss
@@ -1,10 +1,9 @@
 @charset "utf-8";
 
 .container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 800px));
   justify-content: center;
-  align-items: center;
 
   .game__start {
     // Flex Layout
@@ -30,5 +29,11 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .game__start {
+    grid-column: 1 / span 2;
   }
 }
