--- a/scss/game.scss
+++ b/scss/game.scss
@@ -24,7 +24,6 @@
   width: 100vw;
 
   .game__start {
-    width: 100%;
     padding: 48px 0px 24px 24px;
 
     .game__title {
@@ -90,9 +89,8 @@
 
   .game__flag {
     border: 2px solid black;
-    width: 50%;
-    height: 50vh;
-    min-width: 300px;
+    padding-bottom: 24px;
+    min-height: 380px;
 
     h1 {
       margin: 40px 0px;
@@ -102,14 +100,13 @@
     .country__flag {
       width: 80%;
       height: 50%;
+      max-height: 300px;
     }
   }
 
   .game__inputs {
     border: 2px solid black;
     padding: 16px 0px 16px 16px;
-    min-height: 50vh;
-    min-width: 300px;
 
     .input__field {
       width: 40%;
